# groovechip

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  remux.sh
.cache/clangd/index/: adc1.c.7D49415981596E28.idx  adc1.h.083553269C726477.idx  effects.c.EE5FCBD43EB66980.idx  effects.h.B5771DAD6706946A.idx  example.c.10F7EB258D01E483.idx  example.h.81CC2933D4C91CE1.idx  fsm.c.1C609588BB8FCD17.idx  fsm.h.1B053BB2FF7730F5.idx  i2s_driver.c.D1FC28F8A4F8694B.idx  i2s_driver.h.12B7750EE7B01DC0.idx  joystick.c.C046977B72281FEB.idx  joystick.h.D4AE691E4478B6D0.idx  lcd.c.D5338E5F87932BFA.idx  lcd.h.4E25C467A35BD75B.idx  main.c.EA1E293D38ABA0BD.idx  metronome.c.7C27F007CD1D0E5F.idx  metronome.h.5696C601ADC39918.idx  metronome_sound.h.82D6B86BAD3AD4D1.idx  mixer.c.5EF54B17D3CEB6D6.idx  mixer.h.45AE16F7C454B651.idx  pad_section.c.53603D0E6D051076.idx  pad_section.h.E2229F4EEFAD0D29.idx  playback_mode.c.3205E1BBF696D46E.idx  playback_mode.h.1439F537CBDEC14F.idx  potentiometer.c.480F913A4C07EE4F.idx  potentiometer.h.7F92B19F3FA0B1DE.idx  recorder.c.94EC545C5F894DE6.idx  recorder.h.472838A9AB4C1EAE.idx  sd_reader.c.4C37C9C1D04A778C.idx  sd_reader.h.DB678466BA73DDD0.idx  spi_driver.c.34006ECF1A19F283.idx  spi_driver.h.8F6386F74BC890F5.idx
components/adc1/include/: adc1.h
components/effects/: CMakeLists.txt  effects.c
components/effects/include/: effects.h
components/fsm/: CMakeLists.txt  fsm.c
components/fsm/include/: fsm.h
components/i2s/: CMakeLists.txt  i2s_driver.c
components/i2s/include/: dummy_wav_2.h  i2s_driver.h
components/joystick/: CMakeLists.txt  joystick.c  joystick.h
components/joystick/include/: joystick.h
components/lcd/: CMakeLists.txt  lcd.c
components/lcd/include/: lcd.h
components/metronome/: CMakeLists.txt  metronome.c
components/metronome/include/: metronome.h  metronome_sound.h
components/microphone/: CMakeLists.txt  microphone.c
components/microphone/include/: microphone.h
components/mixer/: CMakeLists.txt  mixer.c
components/mixer/include/: dummy_wav.h  kick.h  metronome.h  mixer.h  snare.h
components/pad_section/: CMakeLists.txt  pad_section.c
components/pad_section/include/: pad_section.h
components/playback_mode/: CMakeLists.txt  playback_mode.c
components/playback_mode/include/: playback_mode.h
components/potentiometer/: CMakeLists.txt  potentiometer.c
components/potentiometer/include/: potentiometer.h
components/recorder/: CMakeLists.txt  recorder.c
components/sample/: CMakeLists.txt  sample.c
components/sample_mode/: CMakeLists.txt  sample_mode.c
components/sd_reader/: CMakeLists.txt  sd_reader.c
components/spi/: CMakeLists.txt  spi_driver.c
components/template/: example.c
main/: CMakeLists.txt  main.c
(+8 files in other folders)
